--- a/test-nucleo-F446RE/CMakeLists.txt
+++ b/test-nucleo-F446RE/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 3.19.0)
 
 set(MBED_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../mbed-os CACHE INTERNAL "")
 set(MBED_CONFIG_PATH ${CMAKE_CURRENT_BINARY_DIR} CACHE INTERNAL "")
-set(APP_TARGET mbed_new)
+set(APP_TARGET mbed-output)
 
 include(${MBED_PATH}/tools/cmake/app.cmake)
 
@@ -15,10 +15,6 @@ add_subdirectory(${MBED_PATH} ${CMAKE_CURRENT_BINARY_DIR}/mbed-os)
 
 add_executable(${APP_TARGET}
     main.cpp
-    ../KRAI_library/Motor/Motor.cpp
-    ../KRAI_library/encoderKRAI/encoderKRAI.cpp
-    ../KRAI_library/pidLo/pidLo.cpp
-    ../KRAI_library/JoystickPS3/JoystickPS3.cpp
 )
 
 target_link_libraries(${APP_TARGET} mbed-os)
